srv/wiki_lts/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wiki-mariadb
  labels:
    app: wiki-mariadb
spec:
  replicas: 1  
  template:
    metadata:
      labels:
        app: wiki-mariadb
    spec:
      containers:
      - name: wiki-mariadb
        image: mariadb:10.3
        ports:        
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: wiki-mariadb
          subPath: mysql
        resources:
            requests:
                memory: 512Mi
                cpu: 300m
      volumes:
        - name: wiki-mariadb
          persistentVolumeClaim:
            claimName: wiki-mariadb

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wiki
  labels:
    app: wiki
spec:
  replicas: 1  
  template:
    metadata:
      labels:
        app: wiki
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "wiki-mariadb"        
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: wiki
        image: cticsjeifsc/mediawiki:latest        
        ports:        
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /index.php/Página_principal
            port: 80
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 6
        volumeMounts:
        - mountPath: /var/www/html/extensions
          name: wiki-data
          subPath: extensions
        - mountPath: /var/www/html/images
          name: wiki-data
          subPath: images
        - mountPath: /var/www/html/skins
          name: wiki-data
          subPath: skins
        - mountPath: /var/www/html/LocalSettings.php
          name: wiki-data
          subPath: LocalSettings.php
        resources:
            requests:
                memory: 512Mi
                cpu: 300m
      volumes:
      - name: wiki-data
        persistentVolumeClaim:
          claimName: wiki
