srv/wiki_lts/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wiki-mariadb
  name: wiki-mariadb
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: wiki-mariadb

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: wiki
  name: wiki
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wiki
