srv/wiki_lts/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wiki 
spec:
  tls:
    - hosts:
        - wiki.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
  rules:
    - host: wiki.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: wiki
              servicePort: 80
